# ElasticNodeMiddleware

app/: BUILD.bazel
src/controlmanager/: controlmanager.c
templates/: BUILD.bazel  appBUILD.bazel
