load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

py_library(
    name = "bitfileConfigs",
    srcs = ["uploadScripts/bitfileConfigs.py"],
    deps = ["@ElasticNodeMiddleware//:Configuration"],
)

py_library(
    name = "portConfigs",
    srcs = ["uploadScripts/portConfigs.py"],
    deps = ["@ElasticNodeMiddleware//:Configuration"],
)

py_binary(
    name = "uploadBitfiles",
    srcs = ["uploadScripts/uploadBitfiles.py"],
    deps = [
        "bitfileConfigs",
        "portConfigs",
        "@ElasticNodeMiddleware//:serial_test",
    ],
)
