load("@AvrToolchain//:helpers.bzl", "default_embedded_binary")
load("@AvrToolchain//platforms/cpu_frequency:cpu_frequency.bzl", "cpu_frequency_flag")

default_embedded_binary(
    name = "main",
    srcs = ["main.c"],
    copts = cpu_frequency_flag(),
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//app/setup:Setup",
        "//:ElasticNodeMiddlewareLib",
        "//:DebugLufaLib",
        #        "//:Reconfigure_multibootLib",
        #        "//:XMemLib",
        #        "//app/setup:Setup",
        #        "//:ControlmanagerLib",
        #        "//:FlashLib",
        "//:LedLib",
    ],
)

default_embedded_binary(
    name = "mainDEBUG",
    srcs = ["main.c"],
    copts = cpu_frequency_flag() + ["-DDEBUG"],
    uploader = "@AvrToolchain//:avrdude_upload_script",
    deps = [
        "//app/setup:Setup",
        "//:ElasticNodeMiddlewareLib",
        "//:DebugLufaLib",
        #        "//:Reconfigure_multibootLib",
        #        "//:XMemLib",
        #        "//app/setup:Setup",
        #        "//:ControlmanagerLib",
        #        "//:FlashLib",
        "//:LedLib",
    ],
)
